     Found by okan at demirmen.com, ok djm@ "please do it" deraadt@
   - djm@cvs.openbsd.org 2007/03/19 01:01:29
     [sshd_config]
     Disable the legacy SSH protocol 1 for new installations via
     a configuration override. In the future, we will change the
     server's default itself so users who need the legacy protocol
     will need to turn it on explicitly

20070313
 - (dtucker) [entropy.c scard-opensc.c ssh-rand-helper.c] Bug #1294: include
   string.h to prevent warnings, from vapier at gentoo.org.
 - (dtucker) [LICENCE] Add Daniel Walsh as a copyright holder for the
   selinux bits in -portable.
 - (dtucker) [cipher-3des1.c cipher-bf1.c] The OpenSSL 0.9.8e problem in
   bug #1291 also affects Protocol 1 3des.  While at it, use compat-openssl.h
   in cipher-bf1.c.  Patch from Juan Gallego.
 - (dtucker) [README.platform] Info about blibpath on AIX.

20070306
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2007/03/01 16:19:33
     [sshd_config.5]
     sort the `match' keywords;
   - djm@cvs.openbsd.org 2007/03/06 10:13:14
     [version.h]
     openssh-4.6; "please" deraadt@
 - (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
   [contrib/suse/openssh.spec] crank spec files for release
 - (djm) [README] correct link to release notes
 - (djm) Release 4.6p1

20070304
 - (djm) [configure.ac] add a --without-openssl-header-check option to
   configure, as some platforms (OS X) ship OpenSSL headers whose version
   does not match that of the shipping library. ok dtucker@
 - (dtucker) [openbsd-compat/openssl-compat.h] Bug #1291: Work around a
   bug in OpenSSL 0.9.8e that prevents aes256-ctr, aes192-ctr and arcfour256
   ciphers from working correctly (disconnects with "Bad packet length"
   errors) as found by Ben Harris.  ok djm@

20070303
 - (dtucker) [regress/agent-ptrace.sh] Make ttrace gdb error a little more
   general to cover newer gdb versions on HP-UX.

20070302